--- a/AppServSalud/src/main/resources/templates/forms/usuario_form.html
+++ b/AppServSalud/src/main/resources/templates/forms/usuario_form.html
@@ -13,52 +13,52 @@
     
     <div class="container-fluid m-5 contenedor">
 
-        <form class="formulario" th:action="@{/registro}" method="POST" >
+        <form class="formulario" th:action="@{/paciente/registro}" method="POST" >
 
 
             <div class="form-group my-3">
                 <h3 class="card-title">Registrate en Hospital House</h3>
             </div>
             <div class="form-group my-3">
-                <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}">
+                <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" >
             </div>
             <div class="form-group my-3">
-                <input type="text" class="form-control" name="apellido" placeholder="APELLIDO" th:value="${apellido}">
+                <input type="text" class="form-control" name="apellido" placeholder="APELLIDO" >
             </div>
             <div class="form-group my-3">
-                <input type="email" class="form-control" name="correo" placeholder="CORREO" th:value="${correo}">
+                <input type="email" class="form-control" name="email" placeholder="CORREO" >
             </div>
              <div class="form-group my-3">
             <p class="text-sm mb-2 mt-2 text-gray-600"></p>
              <label>N° de Documento</label>
-            <input type="tel" placeholder="Números sin espacios">
+            <input type="number" name="dni" placeholder="Números sin espacios">
             </div>
             
             <div class="form-group my-3">
                 <label>
                     Fecha de nacimiento:
-                    <input type="date" name="bday" />
+                    <input type="date" name="fechaNacimiento" /> 
                   </label>
             </div>
             <div class="form-group my-3">
                 <p class="text-sm mb-2 mt-2 text-gray-600">Sexo:</p>
-                <input type="radio" class="form-radio" name="accountType" value="M">
+                <input type="radio" class="form-radio" name="sexo" value="MASCULINO">
                 <span>Masculino </span>
-                <input type="radio" class="form-radio" name="accountType" value="F">
+                <input type="radio" class="form-radio" name="sexo" value="FEMENINO">
                 <span> Femenino </span>
-                <input type="radio" class="form-radio" name="accountType" value="X"> 
+                <input type= "radio" class="form-radio" name="sexo" value="X"> 
                 <span> X </span>
                  
             </div>
             <div class="form-group my-3">
             <label>N° de Telefono</label>
-            <input type="tel" placeholder="1123456789">
+            <input type="number" name="telefono" placeholder="1123456789">
             </div>
             <div class="form-group my-3">
-                <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" th:value="${password}">
+                <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" >
             </div>
             <div class="form-group my-3">
-                <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" th:value="${password2}">
+                <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" >
             </div>
 
 
