--- a/AppServSalud/src/main/resources/templates/fragments/navbar.html
+++ b/AppServSalud/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse collapse show" id="navbarColor03" style="">
+    <div class="navbar-collapse collapse show" id="navbarColor03">
         
           <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
