cambio de fragments y de paciente/registro en formulario

--- a/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    
-    <nav th:replace="/fragment/navbar :: nav"></nav>
+    <nav th:replace="/fragments/navbar :: nav"></nav>
     
     <div class="container-fluid m-5 contenedor">
 
