--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -11,11 +11,12 @@
         <div class="texto"></div>
         <img th:src="@{assets/HospitalHouse.jpg}" alt="No se puede mostrar la imagen" width="230px" height="210">
        
-        <nav th:replace="/fragment/navbar :: nav"></nav>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
        </div>
         
         <h1>Hospital House</h1>
     </header>
+
     <section>
         <i><h2>Breve explicación de la clínica</h2></i>
     </section>
