correccion de errores

--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
         <div class="texto"></div>
         <img th:src="@{assets/HospitalHouse.jpg}" alt="No se puede mostrar la imagen" width="230px" height="210">
        
-        <nav th:replace="/fragment/navbar :: nav"></nav>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
        </div>
         
         <h1>Hospital House</h1>
