--- a/AppServSalud/src/main/resources/templates/fragments/navbar.html
+++ b/AppServSalud/src/main/resources/templates/fragments/navbar.html
@@ -19,7 +19,7 @@
         
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/registrar">Registrarse</a>
+            <a class="nav-link active" aria-current="page" href="paciente/registro">Registrarse</a>
           </li>
         </ul>
     </div>
