--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -5,17 +5,17 @@
     <meta name="logoHouse.ico" content="width=device-width, initial-scale=1.0">
     <title>Hospital House</title>
     <link rel="stylesheet" th:href="@{styles/index.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 <body>
     <header>
-        <div class="texto"></div>
-        <img th:src="@{assets/HospitalHouse.jpg}" alt="No se puede mostrar la imagen" width="230px" height="210">
-       
         <nav th:replace="/fragments/navbar :: nav"></nav>
-       </div>
-        
-        <h1>Hospital House</h1>
     </header>
+    <!-- revisar esto---------------------------------------------------------------->
+    <h1>Hospital House</h1>
+    <img th:src="@{assets/HospitalHouse.jpg}" alt="No se puede mostrar la imagen" width="230px" height="210">
+    <!-------------------------------------------------------------------------------->
 
     <section>
         <i><h2>Breve explicación de la clínica</h2></i>
@@ -25,11 +25,11 @@
         <p>como turnos</p>
         <p>novedades</p>
     </section>
-    <footer>
-        <ul>
-            <li><a href="/Ingresar">Ingresar</a></li>
-            <li><a href="/Registrarse">Resgistrarse</a></li>
-        </ul>
-    </footer>
+
+    <footer th:replace="/fragments/footer :: footer"></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
 </body>
 </html>
