--- a/AppServSalud/src/main/resources/templates/fragments/navbar.html
+++ b/AppServSalud/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg" style="background-color: rgba(164, 215, 164, 0.75);" data-bs-theme="light">
     <div class="container-fluid">
       
        <a class="navbar-brand" href="/">
