--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -3,24 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="logoHouse.ico" content="width=device-width, initial-scale=1.0">
-    <title>Hospital House</title>
+    <title>Clinica House</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{styles/index.css}">
     
 </head>
-<body>
-         
-     
-    <header>
-        <div class="texto">
-        <img th:src="@{assets/HospitalHouse.jpg}" alt="No se puede mostrar la imagen" width="230px" height="210">
-        <nav th:replace="/fragments/navbar :: nav"></nav>
 
+<body>
+    <header>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
        </div>
         
-        
     </header>
-
      <div class="container-fluid m-5 contenedor">
             <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
             <div class="card-body">
@@ -36,19 +30,48 @@
         </div>
      </div>
      
-    <section>
-        <i><h2>Breve explicación de la clínica</h2></i>
+    <section class="tabla">
+        <table class="tablas">
+            <tbody>
+                <tr>
+                    <th style="color: aliceblue;">¿Quiénes somos?</th>
+                    <th style="color: aliceblue;">Turnos</th>
+                    <th style="color: aliceblue;">Guardias</th>
+                </tr>
+            </tbody>
+        </table>     
     </section>
-    <section>
-        <i><h2>Pienso poner opciones</h2></i>
-        <p>como turnos</p>
-        <p>novedades</p>
+
+    <center>
+        <section>
+        <p></p>
+        <table class="perfil">
+            <tbody>
+                <tr>
+                    <th>Mi perfil</th>
+                    <th>Telemedicina</th>
+                    <th>Laboratorio</th>
+                    <th>Diagnóstico por imágenes</th>
+                </tr>
+            </tbody>
+        </table>
     </section>
+    </center>
+    
+
     <footer>
-        <h2>haré una tabla con contactos</h2>
+        <div class="footer_textos">
+            <div>
+              <p><h3>Contacto</h3></p>
+              <p><h3>Ubicación</h3></p>
+            </div>
+            <div>
+              <p><h3>Trabajá con nosotros</h3></p>
+              <p><h3>Seguinos en:</h3></p>
+            </div>
+        </div>
+        
     </footer>
-    
-    
     
          
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
