creacion de pacientes.html, funciones para listarlos por alta (true o false), filtrar por nombre y apellido. cambio de estado de paciente

--- a/AppServSalud/src/main/resources/templates/fragments/navbar.html
+++ b/AppServSalud/src/main/resources/templates/fragments/navbar.html
@@ -1,28 +1,34 @@
 <nav class="navbar navbar-expand-lg" style="background-color: rgba(164, 215, 164, 0.75);" data-bs-theme="light">
     <div class="container-fluid">
-      
        <a class="navbar-brand" href="/">
-        <img th:src="@{/assets/clinica-img.png}" alt="logo" width="50" height="40">
-        Clinica Medica
+            <img th:src="@{/assets/clinica-img.png}" alt="logo" width="50" height="40">
+            Clinica Medica
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="true" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse show" id="navbarColor03">
-          
-            <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary" type="submit">Search</button>
+          <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
-     
       </div>
-        
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-
-            <a class="nav-link active" aria-current="page" href="/paciente/registro">Registrarse</a>
-
-          </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Administracion
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/paciente/todos">Todos Los Pacientes</a></li>
+                    <li><a class="dropdown-item" href="#">----</a></li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/paciente/registro">Registrarse</a>
+            </li>
         </ul>
     </div>
   </nav>
