correccion de detalles spring security

--- a/AppServSalud/src/main/resources/templates/pacientes.html
+++ b/AppServSalud/src/main/resources/templates/pacientes.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaft.org">
+<html lang="en" xmlns:th="http://www.thymeleaft.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Pacientes</title>
     <meta name="logoHouse.ico" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{styles/pacientes.css}">
+    <link rel="stylesheet" th:href="@{/styles/pacientes.css}">
+    <link rel="stylesheet" th:href="@{/styles/footer.css}">
 </head>
 <body>
 
@@ -14,8 +16,8 @@
     <div>
         <h3>Buscar por nombre y apellido:</h3>
         <form  th:action="@{/paciente/buscarPorNombreYApellido}" method="get">
-            <input type="text" name="nombre" placeholder="Nombre" required>
-            <input type="text" name="apellido" placeholder="Apellido" required>
+            <input type="text" name="nombre" placeholder="Nombre">
+            <input type="text" name="apellido" placeholder="Apellido">
             <button type="submit">Buscar</button>
         </form>
         <a href="/paciente/todos">Mostrar todos</a>
@@ -98,6 +100,8 @@
             </tbody>
         </table>
     </div>
+
+    <footer th:replace="/fragments/footer :: footer"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
