--- a/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaft.org">
+<html lang="es" xmlns:th="http://www.thymeleaft.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles/footer.css}">
+
 </head>
-<body>
+<body class="flex center">
     <nav th:replace="/fragments/navbar :: nav"></nav>
-    
     
      <div class="container-fluid m-5 contenedor">
             <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
@@ -23,34 +25,31 @@
                 <p class="card-text" th:text="${exito}"></p>
             </div>
         </div>
-
+     </div>
     
-    <div class="container-fluid m-5 contenedor">
+    <div class="container-fluid m-5 container" >
 
         <form class="formulario" th:action="@{/paciente/registro}" method="POST" >
             <div class="form-group my-3">
                 <h3 class="card-title">Registrate en Hospital House</h3>
             </div>
             <div class="form-group my-3">
-                <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" >
+                <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" required>
             </div>
             <div class="form-group my-3">
-                <input type="text" class="form-control" name="apellido" placeholder="APELLIDO" >
+                <input type="text" class="form-control" name="apellido" placeholder="APELLIDO" required>
             </div>
             <div class="form-group my-3">
-                <input type="email" class="form-control" name="email" placeholder="CORREO" >
+                <input type="email" class="form-control" name="email" placeholder="CORREO" required>
             </div>
              <div class="form-group my-3">
-            <p class="text-sm mb-2 mt-2 text-gray-600"></p>
-             <label>N° de Documento</label>
-            <input type="number" name="dni" placeholder="Números sin espacios">
+                <label>N° de Documento</label>
+                <input type="number" name="dni" placeholder="Números sin espacios" required>
             </div>
             
             <div class="form-group my-3">
-                <label>
-                    Fecha de nacimiento:
-                    <input type="date" name="fechaNacimiento" /> 
-                  </label>
+                <label> Fecha de nacimiento:</label>
+                <input type="date" name="fechaNacimiento" required/>
             </div>
             <div class="form-group my-3">
                 <p class="text-sm mb-2 mt-2 text-gray-600">Sexo:</p>
@@ -60,17 +59,16 @@
                 <span> Femenino </span>
                 <input type= "radio" class="form-radio" name="sexo" value="X"> 
                 <span> X </span>
-                 
             </div>
             <div class="form-group my-3">
-            <label>N° de Telefono</label>
-            <input type="number" name="telefono" placeholder="1123456789">
+                <label>N° de Telefono</label>
+                <input type="number" name="telefono" placeholder="1123456789" required>
+            </div>
+                <div class="form-group my-3">
+                <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" required>
             </div>
             <div class="form-group my-3">
-                <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" >
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" >
+                <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" required>
             </div>
             
             <button type="submit" class="btn btn-primary mt-3 botones">Registrarme</button>
@@ -84,8 +82,9 @@
             </div>
         </div>
     </section>
-    
-    
+
+    <footer th:replace="/fragments/footer :: footer"></footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
