--- a/AppServSalud/src/main/resources/templates/fragments/navbar.html
+++ b/AppServSalud/src/main/resources/templates/fragments/navbar.html
@@ -19,7 +19,7 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Inicio</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
                 <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Administracion
                 </a>
@@ -28,18 +28,15 @@
                     <li><a class="dropdown-item" href="#">----</a></li>
                 </ul>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link active" aria-current="page" href="/paciente/registro">Registrarse</a>
             </li>
-             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/paciente/registro">Registrarse</a>
-            </li>
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link active" href="/login">Iniciar sesión</a>
             </li>
-            <li class="nav-item">
-                <form th:action="@{/logout}" method="post">
-                    <input class="nav-link active"  type="submit" value="Cerrar sesión">
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" method="post" style="display: flex;align-content: center;align-items: center">
+                    <input class="nav-link active"  type="submit" value="Cerrar sesión"><span th:text="${#httpServletRequest.getRemoteUser()}"></span>
                 </form>
             </li>
         </ul>
