--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaft.org">
+<html lang="es" xmlns:th="http://www.thymeleaft.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
@@ -27,6 +28,9 @@
 </head>
 <body>
     <nav th:replace="/fragments/navbar :: nav"></nav>
+
+    <h2 th:if="${error != null}"> error</h2>
+
     <div class="body">
         <form class="container form-login" th:action="@{/login}" method="post">
             <div class="mb-3">
@@ -42,8 +46,6 @@
             </div>
         </form>
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
