Refactorización de sintaxis y corrección de errores del frontend

--- a/AppServSalud/src/main/resources/templates/fragments/footer.html
+++ b/AppServSalud/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,21 @@
 <footer>
-    <ul>
-        <li><a href="/login">Ingresar</a></li>
-        <li><a href="/Registrarse">Resgistrarse</a></li>
-    </ul>
+    <div class="footer_textos">
+        <div>
+            <p>
+            <h3>Contacto</h3>
+            </p>
+            <p>
+            <h3>Ubicación</h3>
+            </p>
+        </div>
+        <div>
+            <p>
+            <h3>Trabajá con nosotros</h3>
+            </p>
+            <p>
+            <h3>Seguinos en:</h3>
+            </p>
+        </div>
+    </div>
+
 </footer>
