--- a/AppServSalud/src/main/resources/templates/bienvenido.html
+++ b/AppServSalud/src/main/resources/templates/bienvenido.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaft.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Test Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-    <nav th:replace="/fragments/navbar :: nav"></nav>
-    <h1>Bienvenido</h1>
-
-
-</body>
+<html
+    lang="en"
+    xmlns:th="http://www.thymeleaft.org"
+>
+    <head th:replace="/fragments/head :: head"></head>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
+        <main>
+            <h1>Bienvenido</h1>
+        </main>
+        <footer th:replace="/fragments/header :: header"></footer>
+    </body>
 </html>
