--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaft.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Clinica House</title>
-    <meta name="logoHouse.ico" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{styles/index.css}">
-</head>
-<body>
-    <header>
-        <nav th:replace="/fragments/navbar :: nav"></nav>
-        
-    </header>
-     <div class="container-fluid m-5 contenedor">
-            <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
-            <div class="card-body">
-                <h5 class="card-title">Error!</h5>
-                <p class="card-text" th:text="${error}"></p>
+<html
+    lang="es"
+    xmlns:th="http://www.thymeleaft.org"
+>
+    <head th:replace="/fragments/head :: head"></head>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
+        <main>
+            <div class="container-fluid m-5 contenedor">
+                <div
+                    th:if="${error != null}"
+                    class="card text-white bg-danger mb-3 mensajeError"
+                >
+                    <div class="card-body">
+                        <h5 class="card-title">Error!</h5>
+                        <p
+                            class="card-text"
+                            th:text="${error}"
+                        ></p>
+                    </div>
+                </div>
+                <div
+                    th:if="${exito != null}"
+                    class="card text-white bg-success mb-3 mt-3 mensajeExito"
+                >
+                    <div class="card-body">
+                        <h5 class="card-title">Exito!</h5>
+                        <p
+                            class="card-text"
+                            th:text="${exito}"
+                        ></p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-            <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
-                <p class="card-text" th:text="${exito}"></p>
-            </div>
-        </div>
-     </div>
-     
-    <section class="tabla">
-        <table class="tablas">
-            <tbody>
-                <tr>
-                    <th style="color: aliceblue;">¿Quiénes somos?</th>
-                    <th style="color: aliceblue;">Turnos</th>
-                    <th style="color: aliceblue;">Guardias</th>
-                </tr>
-            </tbody>
-        </table>     
 
-    </section>
+            <section class="tabla">
+                <table class="tablas">
+                    <tbody>
+                        <tr>
+                            <th style="color: aliceblue;">¿Quiénes somos?</th>
+                            <th style="color: aliceblue;">Turnos</th>
+                            <th style="color: aliceblue;">Guardias</th>
+                        </tr>
+                    </tbody>
+                </table>
 
-    <center>
-        <section>
-        <p></p>
-        <table class="perfil">
-            <tbody>
-                <tr>
-                    <th>Mi perfil</th>
-                    <th>Telemedicina</th>
-                    <th>Laboratorio</th>
-                    <th>Diagnóstico por imágenes</th>
-                </tr>
-            </tbody>
-        </table>
-    </section>
+            </section>
 
-    </center>
-    
+            <center>
+                <section>
+                    <p></p>
+                    <table class="perfil">
+                        <tbody>
+                            <tr>
+                                <th>Mi perfil</th>
+                                <th>Telemedicina</th>
+                                <th>Laboratorio</th>
+                                <th>Diagnóstico por imágenes</th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
 
-    <footer>
-        <div class="footer_textos">
-            <div>
-              <p><h3>Contacto</h3></p>
-              <p><h3>Ubicación</h3></p>
-            </div>
-            <div>
-              <p><h3>Trabajá con nosotros</h3></p>
-              <p><h3>Seguinos en:</h3></p>
-            </div>
-        </div>
-        
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-
-</body>
+            </center>
+        </main>
+        <footer th:replace="/fragments/footer :: footer"></footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
