--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -1,52 +1,75 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaft.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-            .body{
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100vw;
-                height: 100vh;
-                display: grid;
-                place-content: center;
-                z-index: -1;
-            }
+<html
+    lang="es"
+    xmlns:th="http://www.thymeleaft.org"
+>
+    <head th:replace="/fragments/head :: head"></head>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
+        <h2 class="text-center mt-5">Ingresar</h2>
+        <div class="container-sm mt-5">
+            <form
+                th:action="@{/login}"
+                method="post"
+            >
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="input-group mb-3">
+                            <label
+                                for="exampleFormControlInput1"
+                                class="input-group-text"
+                            >Email</label>
+                            <input
+                                type="email"
+                                class="form-control"
+                                id="exampleFormControlInput1"
+                                placeholder="name@example.com"
+                                name="username"
+                            >
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="input-group mb-3">
+                            <label
+                                for="inputPassword5"
+                                class="input-group-text"
+                            >Contraseña</label>
+                            <input
+                                type="password"
+                                id="inputPassword5"
+                                class="form-control"
+                                aria-describedby="passwordHelpBlock"
+                                name="password"
+                            >
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-2 mb-3 d-grid">
+                        <input
+                            type="submit"
+                            placeholder="Iniciar session"
+                            class="btn btn-primary"
+                        >
+                    </div>
+                </div>
+            </form>
+        </div>
 
-            .form-login {
-                padding: 20px;
-                width: 400px;
-                border: 1px solid #ccc;
-                border-radius: 15px;
-            }
-
-    </style>
-</head>
-<body>
-    <nav th:replace="/fragments/navbar :: nav"></nav>
-    <div class="body">
-        <form class="container form-login" th:action="@{/login}" method="post">
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="username">
-            </div>
-            <div class="mb-3">
-                <label for="inputPassword5" class="form-label">Password</label>
-                <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" name="password">
-            </div>
-            <div class="mb-3">
-                <input type="submit" placeholder="Iniciar session" class="btn btn-primary">
-            </div>
-        </form>
-    </div>
 
 
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"
+        ></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-
-</body>
+    </body>
 </html>
