--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -13,6 +13,10 @@
   >
   <link
     rel="stylesheet"
-    th:href="@{styles/index.css}"
+    th:href="@{/styles/index.css}"
+  >
+  <link
+          rel="stylesheet"
+          th:href="@{/styles/footer.css}"
   >
 </head>
