--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -60,7 +60,7 @@
                                     href="/"
                                 >Inicio</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
                                 <a
                                     class="nav-link dropdown-toggle active"
                                     href="#"
@@ -73,28 +73,32 @@
                                 <ul class="dropdown-menu">
                                     <li><a
                                             class="dropdown-item"
+                                            href="/bienvenido"
+                                    >Inicio Administracion</a></li>
+                                    <li><a
+                                            class="dropdown-item"
                                             href="/paciente/todos"
                                         >Todos Los Pacientes</a></li>
                                     <li><a
                                             class="dropdown-item"
                                             href="#"
-                                        >----</a></li>
+                                    >----</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" sec:authorize="!isAuthenticated()">
                                 <a
                                     class="nav-link active"
                                     aria-current="page"
                                     href="/paciente/registro"
                                 >Registrarse</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" sec:authorize="!isAuthenticated()">
                                 <a
                                     class="nav-link active"
                                     href="/login"
                                 >Iniciar sesión</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
                                 <form
                                     th:action="@{/logout}"
                                     method="post"
