--- a/AppServSalud/src/main/resources/static/styles/perfil.css
+++ b/AppServSalud/src/main/resources/static/styles/perfil.css
@@ -1,25 +1,60 @@
-.profile {
-display: flex;
-align-items: center;
-margin-bottom: 20px;
+.card-article{
+ 
+  top: 30vh;
+  width: fit-content !important;
+  height: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #86d162;   
+  border-radius: 10px;
+  padding: 0px !important;
 }
 
+.profile {
+
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+   
+}
+
+.card-header{
+    position: relative ;
+    height: 120px;
+    text-align: center;
+}
+.card-body{
+    position: relative;
+    top: 170px;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+}
 .avatar {
 width: 100px;
 height: 100px;
 border-radius: 50%;
 overflow: hidden;
 margin-right: 20px;
+
+}
+.portada-perfil{
+    border-radius: 10px 10px 0 0;
 }
 
-.avatar img {
-width:100%;
+.avatar-img {
+    position: absolute;
+    top: 30px;
+    left: 125px;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 3px solid rgb(56, 112, 10);
+    background-color: rgb(56, 112, 10);
+}
 
-height: 100%; object-fit: cover; }
 
-.info h1 { margin: 0; font-size: 28px; }
 
-.info p { margin: 0; font-size: 16px; }
 
 .additional-info { margin-bottom: 20px; }
 
