--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -98,12 +98,8 @@
                                     href="/login"
                                 >Iniciar sesión</a>
                             </li>
-                            
-                            
-                            
-                            
-
-  <li class="nav-item" sec:authorize="isAuthenticated()">
+  
+                           <li class="nav-item" sec:authorize="isAuthenticated()">
                                 <a
                                     class="nav-link dropdown-toggle active"
                                     href="#"
@@ -113,16 +109,17 @@
                                 Perfil
                                 </a>
                
-          <ul class="dropdown-menu">
-              <li>
-                  <a class="nav-link active" href="/paciente/perfil">
-                      Ver Mi Perfil</a></li>
-            <li>
-                <a class="nav-link active" 
-                   th:href="@{/paciente/modificar/__${#httpServletRequest.getRemoteUser()}__}" 
-                   >Editar Perfil</a>
-            </li>
-            <li class="nav-item" sec:authorize="isAuthenticated()">
+                            <ul class="dropdown-menu">
+                                <li>
+                                 <a class="nav-link active" href="/paciente/perfil">
+                                  Ver Mi Perfil</a>
+                                </li>
+                                <li>
+                                <a class="nav-link active" 
+                                   th:href="@{/paciente/modificar/__${#httpServletRequest.getRemoteUser()}__}" 
+                                   >Editar Perfil</a>
+                                </li>
+                               <li class="nav-item" sec:authorize="isAuthenticated()">
                                 <form
                                     th:action="@{/logout}"
                                     method="post"
@@ -133,9 +130,10 @@
                                         value="Cerrar sesión"
                                     >
                                 </form>
-                            </li>
+                               </li>
+                             </ul>
+                           </li>
                         </ul>
-  </li>
                     </div>
                 </nav>
             </div>
