Css en head.html y agregué header.

--- a/AppServSalud/src/main/resources/templates/dashboardProf.html
+++ b/AppServSalud/src/main/resources/templates/dashboardProf.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaft.org">
 
-    <head th:replace="/fragments/head :: head">
-    <head>
-        <link rel="stylesheet" th:href="@{/style/dashProf-css}">
-    </head>
+    <head th:replace="/fragments/head :: head"></head>
+    
     <body>
+        <header th:replace="/fragments/header :: header"></header>
         <i><h1>Bienvenido</h1></i>
 
         <div class="containes-fluid">
