--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -19,4 +19,5 @@
           rel="stylesheet"
           th:href="@{/styles/footer.css}"
   >
+  <link rel="stylesheet" th:href="@{/style/dashProf.css}">
 </head>
