--- a/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
@@ -137,6 +137,7 @@
                             <select
                                 class="form-select"
                                 id="pacienteSexo"
+                                name="sexo"
                             >
                                 <option selected>Elige una opción</option>
                                 <option value="MASCULINO">Masculino</option>
